--- a/.github/workflows/change-files.yml
+++ b/.github/workflows/change-files.yml
@@ -1,6 +1,16 @@
-- name: Get All Changed Files
-  uses: jitterbit/get-changed-files@v1
-- run: |
-    for changed_file in ${{ steps.files.outputs.all }}; do
-      echo "Do something with this ${changed_file}."
-    done
+name: pa11y tests
+
+on: [pull_request]
+
+jobs:
+  build:
+    name: Building site and running pa11y-ci tests
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Get All Changed Files
+      uses: jitterbit/get-changed-files@v1
+    - run: |
+        for changed_file in ${{ steps.files.outputs.all }}; do
+          echo "Do something with this ${changed_file}."
+        done
