--- a/.github/workflows/change-files.yml
+++ b/.github/workflows/change-files.yml
@@ -8,9 +8,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Get All Changed Files
-      uses: jitterbit/get-changed-files@v1
-    - run: |
-        for changed_file in ${{ steps.files.outputs.all }}; do
-          echo "Do something with this ${changed_file}."
-        done
+      - id: files
+        uses: Ana06/get-changed-files@v2.0.0
+      - run: |
+          for changed_file in ${{ steps.files.outputs.all }}; do
+           echo "Do something with this ${changed_file}."
+          done
